--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chess Mastery</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f8f9fa;
+            color: #333;
+        }
+        header {
+            background-color: #222;
+            color: white;
+            padding: 20px;
+        }
+        .logo {
+            width: 100px;
+        }
+        .container {
+            margin: 20px auto;
+            max-width: 800px;
+            background: white;
+            padding: 20px;
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+        }
+        .chess-board {
+            display: grid;
+            grid-template-columns: repeat(8, 50px);
+            grid-template-rows: repeat(8, 50px);
+            margin: 20px auto;
+        }
+        .chess-board div {
+            width: 50px;
+            height: 50px;
+        }
+        .black { background-color: #769656; }
+        .white { background-color: #eeeed2; }
+        footer {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #222;
+            color: white;
+        }
+    </style>
 </head>
-
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
+    <header>
+        <img src="chess-logo.png" alt="Chess Logo" class="logo">
+        <h1>Chess Mastery</h1>
+    </header>
+    <div class="container">
+        <h2>Welcome to the World of Chess</h2>
+        <p>Explore strategies, play games, and master the art of chess.</p>
+        <div class="chess-board">
+            <!-- Chess board pattern -->
+            <script>
+                const board = document.querySelector('.chess-board');
+                for (let i = 0; i < 8; i++) {
+                    for (let j = 0; j < 8; j++) {
+                        const square = document.createElement('div');
+                        square.className = (i + j) % 2 === 0 ? 'white' : 'black';
+                        board.appendChild(square);
+                    }
+                }
+            </script>
+        </div>
+    </div>
+    <footer>
+        &copy; 2025 Chess Mastery. All rights reserved.
+    </footer>
 </body>
-
 </html>
